// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketStatus component closed ticket 1`] = `
<span
  id="change-status-button"
>
  <button
    aria-disabled="false"
    class="wrapper wrapper small fill primary small"
    type="button"
  >
    <span
      class="content"
    >
      <i
        class="material-icons icon"
      >
        check
      </i>
    </span>
  </button>
</span>
`;

exports[`TicketStatus component open ticket 1`] = `
<span
  id="change-status-button"
>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-secondary-a432 ui-button-small-a432"
    type="button"
  >
    <i
      aria-hidden="true"
      class="material-icons ui-buttonicon-icon-74a9 ui-buttonicon-small-74a9"
    >
      check
    </i>
    <span
      class="ui-button-content-a432"
    >
      Close
    </span>
  </button>
</span>
`;
